[package]
name = "assertor"
version = "0.0.2"
description = "Fluent assertion library with readable failure messages."
license = "Apache-2.0"
repository = "https://github.com/google/assertor"
readme = "README.md"
edition = "2021"
rust-version = "1.67.0"
build = "build.rs"

keywords = ["assert", "assertions", "testing", "unit"]
categories = ["development-tools::testing", "development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.15", optional = true }

[dev-dependencies]
test-case = "3.1.0"

[features]
default = ["float"]
float = ["num-traits"]
testing = []

[build-dependencies]
chrono = "0.4.26"
walkdir = "2.3.3"
lazy_static = "1.4.0"
